# uacj-obd-sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.2.md  RELEASE_NOTES_v0.4.3.md  RELEASE_NOTES_v0.4.5.md  compatibility.md  install.md  instructor.md  instructor_quickstart.md  instructor_quickstart_es.md  wifi_hotspot.md  wiring.md  wiring_walkthrough.md  wiring_walkthrough_stage2.md
installer/: README_INSTALLER.md  start_uacj.bat  start_uacj.sh
scripts/: bench.py  build_installer_zip.py  demo.py  revert_pi_hotspot.sh  seed_sample_sessions.py  setup_pi.sh  setup_pi_hotspot.sh
tests/: test_acquisition_raw_fallback_v0616.py  test_acquisition_v060.py  test_api.py  test_api_admin_v064.py  test_backup_restore.py  test_bench.py  test_can_runtime_v062.py  test_capture_diagnostics_v0611.py  test_cli_v055.py  test_coverage_v0610.py  test_cvn_capture_v069.py  test_e2e_scan_tool.py  test_ecu.py  test_ecu_defensive_v065.py  test_elm327_stn.py  test_encoder_expansion_v0_4_11.py  test_encoders_v063.py  test_extended_mfg_pids.py  test_factory_v060.py  test_honda_pids.py  test_iso_tp.py  test_j1850.py  test_j1850_runtime_v060.py  test_kline.py  test_kline_runtime_v060.py  test_manufacturer_pids.py  test_mode06.py  test_multi_ecu_v0617.py  test_pi_hotspot.py  test_raw_accounting_v0614.py  test_raw_bitmap_probe_v0612.py  test_raw_bypass_v0616.py  test_raw_passthrough_v0613.py  test_real_vehicle_round_trip.py  test_replay.py  test_replay_engine.py  test_retention_v067.py  (+15 more)
(+42 files in other folders)
