[project]
name = "uacj-obd-sim"
version = "0.1.0"
description = "OBD-II training simulator for UACJ — acquisition, storage, modification, and replay"
requires-python = ">=3.11"
authors = [{ name = "Azamat Hakimov" }]
dependencies = [
    "obd>=0.7.2",
    "python-can>=4.3.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "pyserial>=3.5",
    "click>=8.1.7",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
uacj-obd = "uacj_obd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uacj_obd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
